# machine-learning-pwr

./: .gitignore  pyproject.toml
lab-01/: glass.ipynb  iris.ipynb  pca.ipynb
lab-02/: report.ipynb
lab-03/: l3.ipynb  report.ipynb
lab-04/: lab3_CART_drzewa_decyzyjne.ipynb
lab-05/: lab5.ipynb
lab-06/: lab5.ipynb  lab6.ipynb
lab02/: UMA_Lab1_Przetwarzanie_Danych.ipynb  report.ipynb
