[project]
name = "machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "ruff>=0.15.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "ucimlrepo>=0.0.7",
]
