[project]
name = "machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "isort>=8.0.1",
    "kagglehub>=1.0.2",
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "nbformat>=5.10.4",
    "networkx>=3.6.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "ruff>=0.15.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shap>=0.52.0",
    "tqdm>=4.67.3",
    "ucimlrepo>=0.0.7",
    "xgboost>=3.2.0",
]
